--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "my first socket.io app",
   "dependencies": {
     "express": "4.10.2",
+    "mongoose": "^4.0.1",
     "socket.io": "1.2.0"
-}
+  }
 }
